--- a/NeedlePath/NeedlePath.csproj
+++ b/NeedlePath/NeedlePath.csproj
@@ -35,6 +35,7 @@
   <PropertyGroup>
     <ApplicationIcon>protractor_needlepath.ico</ApplicationIcon>
   </PropertyGroup>
+  <PropertyGroup />
   <ItemGroup>
     <Reference Include="fo-dicom.core, Version=5.0.3.0, Culture=neutral, PublicKeyToken=3a13f649e28eb09a, processorArchitecture=MSIL">
       <HintPath>..\packages\fo-dicom.5.0.3\lib\netstandard2.0\fo-dicom.core.dll</HintPath>
