Minor form tweaks.

--- a/NeedlePath/App.config
+++ b/NeedlePath/App.config
@@ -36,7 +36,7 @@
     </assemblyBinding>
   </runtime>
 
-	<System.Windows.Forms.ApplicationConfigurationSection>
+	<!--<System.Windows.Forms.ApplicationConfigurationSection>
 		<add key="DpiAwareness" value="PerMonitorV2" />
-	</System.Windows.Forms.ApplicationConfigurationSection>
+	</System.Windows.Forms.ApplicationConfigurationSection>-->
 </configuration>
